objects/Refund_Details__x.object
<CustomObject>
    <fields>
        <fullName>ALLOCATION_AMT__c</fullName>
        <description>ALLOCATION_AMT</description>
        <externalDeveloperName>ALLOCATION_AMT</externalDeveloperName>
        <label>ALLOCATION_AMT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALLOCATION_DATE_PACIFIC__c</fullName>
        <description>Allocation Date in Pacific Time.</description>
        <externalDeveloperName>ALLOCATION_DATE_PACIFIC</externalDeveloperName>
        <label>ALLOCATION DATE PACIFIC</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALLOCATION_DATE__c</fullName>
        <description>ALLOCATION_DATE</description>
        <externalDeveloperName>ALLOCATION_DATE</externalDeveloperName>
        <label>ALLOCATION_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AR_ITEM_NO__c</fullName>
        <description>AR_ITEM_NO</description>
        <externalDeveloperName>AR_ITEM_NO</externalDeveloperName>
        <label>AR_ITEM_NO</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_ITEM_NO__c</fullName>
        <description>BILL_ITEM_NO</description>
        <externalDeveloperName>BILL_ITEM_NO</externalDeveloperName>
        <label>BILL_ITEM_NO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_POID__c</fullName>
        <description>EVENT_POID</description>
        <externalDeveloperName>EVENT_POID</externalDeveloperName>
        <label>EVENT_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITEM_CODE__c</fullName>
        <description>ITEM_CODE</description>
        <externalDeveloperName>ITEM_CODE</externalDeveloperName>
        <label>ITEM_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_DESCRIPTION__c</fullName>
        <description>ITEM_DESCRIPTION</description>
        <externalDeveloperName>ITEM_DESCRIPTION</externalDeveloperName>
        <label>ITEM_DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_POID__c</fullName>
        <description>ITEM_POID</description>
        <externalDeveloperName>ITEM_POID</externalDeveloperName>
        <label>ITEM_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>